# routes/places-routes.js
@@ -2,8 +2,8 @@ const express = require("express");
 const { check } = require("express-validator");
 
 const fileUpload = require("../middleware/file-upload");
-
 const placesControllers = require("../controllers/places-controllers");
+const checkAuth = require("../middleware/check-auth");
 
 const router = express.Router();
 
@@ -11,9 +11,11 @@ router.get("/:pid", placesControllers.getPlaceById);
 
 router.get("/user/:uid", placesControllers.getPlacesByUserId);
 
+router.use(checkAuth);
+
 router.post(
   "/newPlace",
-  fileUpload.single('image'),
+  fileUpload.single("image"),
   [
     check("title").not().isEmpty(),
     check("description").isLength({ min: 5 }),
